--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@ body {margin: 0;}
                            <tr>
                              <td width="40">Name</td>
                              <td width="5%">:</td>
-                             <td width="55%">SHYAM BIHARI PRASAD</td>
+                             <td width="55%">KUMAR AVINASH</td>
                            </tr>
                            <tr>
                              <td width="40">Age</td>
                              <td width="5%">:</td>
-                             <td width="55%">69</td>
+                             <td width="55%">27</td>
                            </tr>
                            <tr>
                              <td width="40">Gender</td>
@@ -184,7 +184,7 @@ body {margin: 0;}
                            <tr>
                              <td width="40">Address</td>
                              <td width="5%">:</td>
-                             <td width="55%">DHURWA RANCHI</td>
+                             <td width="55%">BARIATU RANCHI</td>
                            </tr>
                          </table> 
 
@@ -204,7 +204,7 @@ body {margin: 0;}
                            <tr>
                              <td width="40">Date of Testing</td>
                              <td width="5%">:</td>
-                             <td width="55%">13-Aug-2020</td>
+                             <td width="55%">27-Apr-2021</td>
                            </tr>
                            <!--<tr>-->
                            <!--  <td width="40">Appointment Date</td>-->
@@ -258,7 +258,7 @@ body {margin: 0;}
         <tbody> 
        
         <tr>
-            <td align="left"><strong>TRUENAT</strong></td>
+            <td align="left"><strong>RT-PCR</strong></td>
             <td colspan="3">NEGATIVE</td>
             <!--<td colspan="3">&nbsp;</td>-->
             <!--<td colspan="3">&nbsp;</td>-->
